clean and reword of signatures

--- a/queries/linux/local_account_added_nix.yml
+++ b/queries/linux/local_account_added_nix.yml
@@ -2,13 +2,13 @@ title: Local Account Added Linux
 description: Query all instances of local accounts being Linux and OSX.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Persistence
    technique: T1136
-   subtechnique: null
+   subtechnique: 
 operating_system: linux
 query: SrcProcCmdLine In Contains Anycase ("useradd")
 false_positives: General account maintenance.
-tags: null
-
+tags: 
+references:
