--- a/queries/linux/dd_data_destruction.yml
+++ b/queries/linux/dd_data_destruction.yml
@@ -1,14 +1,15 @@
 title: DD Data Destruction
-description: Detection of data destruction with the DD command on *nix operating systems. Alternatively, DV 3.0 with 4.4 Agents will support TgtFileDeletionCount > "100" query for detection of over 100 files deleted, which can be combined with *FileType* for filtering.
+description: Detect data destruction with the DD command on *nix operating systems. Alternatively, DV 3.0 with 4.4 Agents will support TgtFileDeletionCount > "100" query for detection of over 100 files deleted, which can be combined with *FileType* for filtering.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Impact
    technique: T1485
-   subtechnique: null
+   subtechnique: 
 operating_system: linux
 query: AgentOS In ("linux","osx") AND TgtProcName = "dd" AND TgtProcCmdLine ContainsCIS "of="
-false_positives: null
-tags: null
-
+false_positives: 
+   - Disk image captures
+tags: 
+references:
