--- a/queries/linux/syslog_disabled.yml
+++ b/queries/linux/syslog_disabled.yml
@@ -2,14 +2,14 @@ title: Disable Syslog
 description: Detect disabling of Linux Syslog service.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 
 mitre:
    tactic: Defense Evasion
    technique: T1562
-   subtechnique: null
+   subtechnique: 
 operating_system: linux
 query: TgtProcName In Contains ("service","chkconfig","systemctl") AND TgtProcCmdLine
   In Contains ("rsyslog stop","off rsyslog","stop rsyslog","disable rsyslog")
-false_positives: null
-tags: null
-
+false_positives: 
+tags: 
+references:
