--- a/queries/windows/bits_jobs.yml
+++ b/queries/windows/bits_jobs.yml
@@ -1,10 +1,10 @@
 title: BITS Jobs
-description: The below query will find and remote content downloads from DesktopImgDownldr
+description: Detect remote content downloads from DesktopImgDownldr
   or BitsAdmin processes, Start-BitsTransfer cmdlet downloads, and excludes system
   processes and noise with SrcProcParentName Not In ().
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Defense Evasion, Persistence
    technique: T1197
@@ -15,6 +15,7 @@ query: (( TgtProcName In Contains Anycase ("bitsadmin.exe","desktopimgdownldr.ex
   OR TgtProcCmdLine ContainsCIS "/setnotifycmdline " ) ) OR ( TgtProcName = "powershell.exe"
   AND TgtProcCmdLine ContainsCIS "Start-BitsTransfer" ) ) AND SrcProcParentName Not
   In ("services.exe","smss.exe","wininit.exe")
-false_positives: null
+false_positives: 
+   - Powershell file downloads
 tags: null
 
