--- a/queries/windows/lazagne_password_theft.yml
+++ b/queries/windows/lazagne_password_theft.yml
@@ -5,13 +5,14 @@ description: LaZagne happens to spawn 3 cmd shells to save security, system and 
   location.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Credential Access
    technique: T1552
    subtechnique: 001
 operating_system: windows
 query: TgtProcCmdline Contains "reg.exe save hklm\s" OR TgtFilePath Contains "lazagne.exe.manifest"
-false_positives: null
-tags: null
+false_positives: 
+   - Full registry exports
+tags: 
 
