--- a/queries/windows/registry_credential_enumeration.yml
+++ b/queries/windows/registry_credential_enumeration.yml
@@ -1,6 +1,5 @@
 title: Registry Credential Enumeration
-description: This query detects enumeration and discovery of credentials within the
-  Registry, including Putty sessions.
+description: Detect enumeration and discovery of credentials within the Registry, including Putty sessions.
 author: keyboardcrunch
 date: 10/10/2020
 modified: null
