--- a/queries/windows/allow_executable_through_defender_firewall.yml
+++ b/queries/windows/allow_executable_through_defender_firewall.yml
@@ -1,8 +1,8 @@
 title: Allow Executable Through Defender Firewall
 author: keyboardcrunch
-description: Detect allowance of executables through Defender Firewall.
+description: Detect allowance of executables within Users or Temp folders through Defender Firewall.
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Defense Evasion
    technique: T1562
@@ -10,6 +10,7 @@ mitre:
 operating_system: windows
 query: TgtProcName = "netsh.exe" AND TgtProcCmdLine ContainsCIS "add rule" AND TgtProcCmdLine
   ContainsCIS "program=" AND TgtProcCmdLine In Contains Anycase ("C:\Users","C:\Windows\Temp")
-false_positives: null
-tags: null
+false_positives: 
+tags: 
+references:
 
