--- a/queries/windows/allow_smb_and_rdp_on_defender_firewall.yml
+++ b/queries/windows/allow_smb_and_rdp_on_defender_firewall.yml
@@ -2,7 +2,7 @@ title: Allow SMB and RDP on Defender Firewall
 description: Detects addition of Defender firewall rules for SMB and RDP.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 
 mitre:
    tactic: Defense Evasion
    technique: T1562
@@ -11,6 +11,6 @@ operating_system: windows
 query: (TgtProcName = "netsh.exe" AND TgtProcCmdLine ContainsCIS "remote desktop"
   AND TgtProcCmdLine ContainsCIS "enable=Yes") OR (TgtProcName = "netsh.exe" AND TgtProcCmdLine
   ContainsCIS "file and printer sharing" AND TgtProcCmdLine ContainsCIS "enable=Yes")
-false_positives: null
-tags: null
-
+false_positives: 
+tags: 
+references:
