--- a/queries/windows/amsi_bypass_initfailed.yml
+++ b/queries/windows/amsi_bypass_initfailed.yml
@@ -2,7 +2,7 @@ title: AMSI Bypass Through InitFailed
 description: Detects AMSI bypass through InitFailed.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 
 mitre:
    tactic: Defense Evasion
    technique: T1562
@@ -10,6 +10,6 @@ mitre:
 operating_system: windows
 query: TgtProcCmdLine ContainsCIS "[Ref].Assembly.GetType('System.Management.Automation.AmsiUtils').GetField('amsiInitFailed','NonPublic,Static').SetValue($null,$true)"
   OR SrcProcCmdScript ContainsCIS "[Ref].Assembly.GetType('System.Management.Automation.AmsiUtils').GetField('amsiInitFailed','NonPublic,Static').SetValue($null,$true)"
-false_positives: null
-tags: null
-
+false_positives: 
+tags: 
+references:
