--- a/queries/windows/csc_compile_after_delivery.yml
+++ b/queries/windows/csc_compile_after_delivery.yml
@@ -1,11 +1,10 @@
-title: Compile After Delivery
-description: Both Atomic tests for this technique leverage csc.exe for compilation
-  of code. The below will detect specific compilation of executables as well as dynamic
+title: CSC Compile After Delivery
+description: Detect specific compilation of executables as well as dynamic
   compilation through detection of csc.exe creating executable files (both dll and
-  exe). Filter noise from later portion of query using SrcProcParentName Not In ().
+  exe). 
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Defense Evasion
    technique: T1027
@@ -13,6 +12,7 @@ mitre:
 operating_system: windows
 query: (TgtProcName = "csc.exe" AND SrcProcCmdLine Contains "/target:exe") OR (SrcProcName  =
   "csc.exe" AND TgtFileIsExecutable = "true" AND SrcProcParentName Not In ("svchost.exe"))
-false_positives: null
+false_positives: 
+   - Absolute/Computrace software.
 tags: null
 
