--- a/queries/windows/dll_search_order_hijacking.yml
+++ b/queries/windows/dll_search_order_hijacking.yml
@@ -1,8 +1,8 @@
 title: DLL Search Order Hijacking
-description: Detection of common DLL search order hijacks.
+description: Detection of common DLL search order hijacks, currently only amsi.dll.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Defense Evasion, Persistence, Privilege Escalation
    technique: T1574
@@ -10,6 +10,6 @@ mitre:
 operating_system: windows
 query: (FileFullName ContainsCIS "amsi.dll" AND FileFullName Does Not ContainCIS "System32")
   AND EventType = "File Creation"
-false_positives: null
-tags: null
+false_positives: 
+tags: 
 
