--- a/queries/windows/edge_or_ie_cred_extraction_w_pwsh.yml
+++ b/queries/windows/edge_or_ie_cred_extraction_w_pwsh.yml
@@ -2,7 +2,7 @@ title: Edge or IE Credential Extraction with PowerShell
 description: Detects the extraction of Edge or Internet Explorer PasswordVault credentials with PowerShell.
 author: keyboardcrunch
 date: 24/11/2020
-modified:
+modified: 05/12/2020
 mitre: 
    tactic: Credential Access
    technique: T1555
@@ -10,8 +10,6 @@ mitre:
 operating_system: windows
 query: SrcProcCmdScript ContainsCIS "Windows.Security.Credentials.PasswordVault" OR SrcProcCmdScript ContainsCIS "RetrievePassword"
 false_positives:
-   - 
 tags:
-   - 
 references:
    - https://github.com/HanseSecure/credgrap_ie_edge
