--- a/queries/windows/inhibit_system_recovery.yml
+++ b/queries/windows/inhibit_system_recovery.yml
@@ -3,16 +3,17 @@ description: Detects the use of vssadmin, wbadmin, bcdedit and powershell deleti
   of shadowcopy content and disabling of system recovery.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Impact
    technique: T1490
-   subtechnique: null
+   subtechnique: 
 operating_system: windows
 query: TgtProcCmdLine In Contains Anycase ("delete shadows","shadowcopy delete","delete
   catalog","recoveryenabled no") OR (TgtProcCmdLine ContainsCIS "Win32_ShadowCopy"
   AND TgtProcCmdLine ContainsCIS "Delete()") OR (SrcProcCmdScript ContainsCIS "Win32_ShadowCopy"
   AND SrcProcCmdScript ContainsCIS "Delete()")
-false_positives: null
-tags: null
+false_positives: 
+   - Manual backup or recovery through shadowcopy
+tags: 
 
