--- a/queries/windows/kill_eventlog_service_threads.yml
+++ b/queries/windows/kill_eventlog_service_threads.yml
@@ -1,10 +1,9 @@
 title: Kill Eventlog Service Threads
-description: Detection is specific to Invoke-Phant0m strings as the test uses it,
-  and we're hoping to catch renamed and obfuscated versions by catching the TerminateThread
-  call.
+description: Invoke-Phant0m specific detection (currently), catches renamed and obfuscated 
+  versions by querying for the TerminateThread call.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Defense Evasion
    technique: T1562
@@ -12,6 +11,6 @@ mitre:
 operating_system: windows
 query: SrcProcCmdLine ContainsCIS "Invoke-Phant0m" OR SrcProcCmdScript ContainsCIS
   "$Kernel32::TerminateThread($getThread" OR SrcProcCmdScript ContainsCIS "Invoke-Phant0m"
-false_positives: null
-tags: null
+false_positives: 
+tags: 
 
