--- a/queries/windows/open_local_port_on_defender_firewall.yml
+++ b/queries/windows/open_local_port_on_defender_firewall.yml
@@ -1,8 +1,8 @@
 title: Open Local Port on Defender Firewall
-description: Detection of opening of local ports within Defender Firewall.
+description: Detect opening of local ports within Defender Firewall.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Defense Evasion
    technique: T1562
@@ -10,6 +10,7 @@ mitre:
 operating_system: windows
 query: TgtProcName = "netsh.exe" AND TgtProcCmdLine ContainsCIS "add rule" AND TgtProcCmdLine
   ContainsCIS "dir=in" AND TgtProcCmdLine ContainsCIS "localport="
-false_positives: null
-tags: null
+false_positives: 
+   - Application installs requiring listening ports.
+tags: 
 
