--- a/queries/windows/outlook_vba_persistence.yml
+++ b/queries/windows/outlook_vba_persistence.yml
@@ -10,8 +10,7 @@ mitre:
 operating_system: windows
 query: ( EventType In("File Creation", "File Modification") AND TgtFilePath Contains Anycase "\Roaming\Microsoft\Outlook" AND TgtFilePath EndsWith Anycase ".otm" ) OR ( EventType In ("Registry Value Create","Registry Value Modified") AND RegistryKeyPath ContainsCIS "Outlook\Security\Level" )
 false_positives:
-   - Possible legit uses of macros for sorting/saving emails.
-tags:
-   - 
+   - Possible legit uses of macros for sorting or saving emails.
+tags: 
 references:
    - https://www.mdsec.co.uk/2020/11/a-fresh-outlook-on-mail-based-persistence/
