--- a/queries/windows/powershell_download_cradles.yml
+++ b/queries/windows/powershell_download_cradles.yml
@@ -1,12 +1,11 @@
-title: Powershell MalDoc
-description: This test merely uses Powershell to download a maldoc, the below query
+title: Powershell Download Cradles
+description: Detects usage of Powershell to download a malicious files. The below query
   will find CommandLine or CommandScript downloads using multiple cradle methods as
-  documented here by HarmJ0y https://gist.github.com/HarmJ0y/bb48307ffa663256e239.
-  The below query should only be used for hunting purposes and covers most unobfuscated
-  powershell cradles.
+  documented here HarmJ0y. This query should only be used for hunting purposes 
+  and covers most unobfuscated powershell cradles.
 author: keyboardcrunch
 date: 10/10/2020
-modified: null
+modified: 05/12/2020
 mitre:
    tactic: Initial Access
    technique: T1566
@@ -16,6 +15,7 @@ query: (SrcProcCmdLine In Contains Anycase ("Net.WebClient","(iwr","DownloadStri
   (","InternetExplorer.Application","Msxml2.XMLHTTP","MSXML2.ServerXMLHTTP") OR SrcProcCmdScript
   In Contains Anycase ("Net.WebClient","(iwr","DownloadString(","WinHttp.WinHttpRequest","IEX
   (","InternetExplorer.Application","Msxml2.XMLHTTP","MSXML2.ServerXMLHTTP"))
-false_positives: null
-tags: null
-
+false_positives: 
+tags: 
+references:
+   - https://gist.github.com/HarmJ0y/bb48307ffa663256e239
