--- a/queries/windows/powershell_time_stomping.yml
+++ b/queries/windows/powershell_time_stomping.yml
@@ -2,7 +2,7 @@ title: PowerShell TimeStomping
 description: Detection of time stomping with PowerShell.
 author: keyboardcrunch
 date: 24/11/2020
-modified:
+modified: 05/12/2020
 mitre: 
    tactic: Defense Evasion
    technique: T1070
@@ -10,8 +10,6 @@ mitre:
 operating_system: windows
 query: SrcProcCmdScript In Contains Anycase ("[IO.File]::SetCreationTime","[IO.File]::SetLastAccessTime","[IO.File]::SetLastWriteTime")
 false_positives:
-   - 
 tags:
-   - 
 references:
    - https://attack.mitre.org/techniques/T1070/006/
