--- a/queries/windows/findstr_password_extraction.yml
+++ b/queries/windows/findstr_password_extraction.yml
@@ -1,4 +1,4 @@
-title: T1552.001 Findstr Password Extraction
+title: Findstr Password Extraction
 description: Detection of content exfiltration of passwords within files using findstr.exe
   or PowerShell's findstr.
 author: keyboardcrunch
@@ -7,7 +7,7 @@ modified: null
 mitre:
    tactic: Credential Access
    technique: T1552
-   subtechnique: 006
+   subtechnique: 001
 operating_system: windows
 query: TgtProcCmdLine ContainsCIS "/si pass" OR TgtProcCmdLine ContainsCIS "-pattern
   password"
