--- a/queries/windows/lsa_secrets_extraction.yml
+++ b/queries/windows/lsa_secrets_extraction.yml
@@ -1,4 +1,4 @@
-title: T1003.004 LSA Secrets
+title: LSA Secrets Extraction
 description: Detect direct LSA extraction with reg.exe.
 author: keyboardcrunch
 date: 10/10/2020
